syntax = "proto3";

package api.message.v1;

option go_package = "./;message";

service MessageService {
  rpc GetMessage(GetMessageReq) returns (GetMessageReply) {}
}

message GetMessageReply {
  message Message  {
    string content = 1;
  }
  repeated Message messages = 1;
}

message GetMessageReq {
  int64 id = 1;
  int64 count = 2;
}
